[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
bytes = "1"
anyhow = "1.0.69"
serde_json = "1.0.93"
thiserror = "1.0.38"
[[bin]]
name = "assembler"
path = "src/bin/assembler/main.rs"
[[bin]]
name = "computer"
path = "src/bin/computer/main.rs"
